# DCSC-YGM

./: CMakeLists.txt
include/: fpp_vertex_permuter.hpp  graph_util.hpp  scc_dcsc_regular.hpp
src/: CMakeLists.txt  run_dcsc.cpp
